<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.3</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.molgenis</groupId>
  <artifactId>vip-inheritance-matcher</artifactId>
  <version>4.0.0</version>

  <name>vip-inheritance-matcher</name>
  <description>Annotates VCF samples with mendelian violation and possible compound flags and
    matching inheritance modes
  </description>

  <scm>
    <connection>scm:git:git://github.com/molgenis/vip-inheritance-matcher.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/molgenis/vip-inheritance-matcher.git
    </developerConnection>
    <url>https://github.com/molgenis/vip-inheritance-matcher</url>
  </scm>

  <licenses>
    <license>
      <distribution>repo</distribution>
      <name>The GNU Lesser General Public License, Version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
    </license>
  </licenses>

  <modelVersion>4.0.0</modelVersion>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/molgenis/vip-inheritance-matcher/issues</url>
  </issueManagement>

  <properties>
    <java.version>25</java.version>
    <commons.cli.version>1.9.0</commons.cli.version>
    <!-- [WARNING] Plugin validation issues were detected, see https://github.com/jacoco/jacoco/issues/1435 -->
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <samtools.htsjdk.version>4.1.3</samtools.htsjdk.version>
    <vip.utils.version>4.0.0</vip.utils.version>
    <errorprone.version>2.48.0</errorprone.version>
    <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
    <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
    <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
    <nullaway.version>0.12.15</nullaway.version>
    <maven.spotless.plugin.version>3.0.0</maven.spotless.plugin.version>
    <mockito.version>5.22.0</mockito.version>
    <jspecify.version>1.0.0</jspecify.version>
    <lombok.version>1.18.42</lombok.version>
  </properties>

  <profiles>
    <profile>
      <build>
        <plugins>
          <plugin>
            <groupId>com.diffplug.spotless</groupId>
            <artifactId>spotless-maven-plugin</artifactId>
          </plugin>
          <plugin>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <id>prepare-agent</id>
              </execution>
              <execution>
                <goals>
                  <goal>report</goal>
                </goals>
                <id>report</id>
              </execution>
              <execution>
                <id>check</id>
                <phase>verify</phase>
                <goals>
                  <goal>check</goal>
                </goals>
                <configuration>
                  <rules>
                    <rule>
                      <element>BUNDLE</element>
                      <limits>
                        <limit>
                          <counter>INSTRUCTION</counter>
                          <value>COVEREDRATIO</value>
                          <minimum>0.80</minimum>
                        </limit>
                      </limits>
                    </rule>
                  </rules>
                </configuration>
              </execution>
            </executions>
            <groupId>org.jacoco</groupId>
            <version>${jacoco-maven-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>coverage</id>
    </profile>
  </profiles>

  <build>
    <finalName>vcf-inheritance-matcher</finalName>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${maven.spotless.plugin.version}</version>
          <configuration>
            <java>
              <googleJavaFormat/>
            </java>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
              <phase>verify</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_core</artifactId>
                <version>${errorprone.version}</version>
              </path>
              <path>
                <groupId>com.uber.nullaway</groupId>
                <artifactId>nullaway</artifactId>
                <version>${nullaway.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
            <compilerArgs>
              <arg>-Xlint</arg>
              <arg>-Xlint:-processing</arg>
              <arg>-Xlint:-restricted</arg>
              <arg>-XDcompilePolicy=simple</arg>
              <arg>--should-stop=ifError=FLOW</arg>
              <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=org.molgenis
                -XepOpt:NullAway:ExcludedFieldAnnotations=org.mockito.Mock -Xep:NullAway:ERROR
                -XepExcludedPaths:.*/src/test/java/.*
              </arg>
            </compilerArgs>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <configuration>
          <excludes>
            <!-- By default provided dependencies are included -->
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <!-- suppress Java 21 dynamic agent loading warning, since there is no suitable fix yet -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.molgenis</groupId>
        <artifactId>vip-utils</artifactId>
        <version>${vip.utils.version}</version>
      </dependency>
      <dependency>
        <artifactId>commons-cli</artifactId>
        <groupId>commons-cli</groupId>
        <version>${commons.cli.version}</version>
      </dependency>
      <dependency>
        <artifactId>htsjdk</artifactId>
        <groupId>com.github.samtools</groupId>
        <version>${samtools.htsjdk.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jspecify</groupId>
        <artifactId>jspecify</artifactId>
        <version>${jspecify.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${mockito.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.molgenis</groupId>
      <artifactId>vip-utils</artifactId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <artifactId>commons-cli</artifactId>
      <groupId>commons-cli</groupId>
    </dependency>
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
    </dependency>
    <dependency>
      <artifactId>htsjdk</artifactId>
      <groupId>com.github.samtools</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
